--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>One Pager</title>
+  <title>এবং</title>
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -129,7 +129,7 @@
     <footer>
       <!-- ✏️ CHANGE SOCIAL LINKS -->
       <div class="socials">
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         <!-- <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a> -->
@@ -146,4 +146,5 @@
 
 </body>
 </html>
+
 
