--- a/index.html
+++ b/index.html
@@ -139,12 +139,19 @@
       <!-- ✏️ CHANGE COPYRIGHT -->
       <div class="copyright">
         © 2026 ❤️ Ebong 
+        <div>
+          <a href=# target="_blank">Shop</a>
+          <a href=# target="_blank">Contact</a>
+        </div>
       </div>
+
+      
     </footer>
 
   </div>
 
 </body>
 </html>
+
 
 
