Add favicon link to index.html
Added favicon link to the HTML head.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="ebong_logo.png">
+
   <style>
     :root {
       /* 🔁 CHANGE THESE ONLY */
@@ -173,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
