Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="ebong_logo.png">
+  <link rel="icon" type="image/png" href="ebong_logo.png">
 
   <style>
     :root {
@@ -176,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
